// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayExternal display error on fetch fail 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #d1372e;
  color: #d1372e;
  padding: 1rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    contenteditable="false"
  >
    <span>
      oEmbed av type  og kilde  er ikke støttet.
    </span>
  </div>
</div>
`;

exports[`DisplayExternal renders external correctly 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #d1372e;
  color: #d1372e;
  padding: 1rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    contenteditable="false"
  >
    <span>
      oEmbed av type external og kilde  er ikke støttet.
    </span>
  </div>
</div>
`;

exports[`DisplayExternal renders iframe correctly 1`] = `
.emotion-4 {
  position: absolute;
  top: 0;
  right: -6.5px;
}

.emotion-4 > * {
  margin-bottom: 6.5px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding: 0;
  background: 0;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  color: #d1372e99;
  width: 26px;
  height: 26px;
}

.emotion-0 svg {
  width: 22px;
  height: 22px;
  position: relative;
  z-index: 1;
  pointer-events: none;
}

.emotion-0::before {
  content: '';
  display: block;
  position: absolute;
  width: 26px;
  height: 26px;
  background: #d1372e4D;
  border-radius: 100%;
  -webkit-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
  opacity: 0;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.emotion-0:hover,
.emotion-0:focus {
  color: #d1372e;
}

.emotion-0:hover::before,
.emotion-0:focus::before {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  opacity: 1;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding: 0;
  background: 0;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  color: #a5bcd3;
  width: 26px;
  height: 26px;
}

.emotion-2 svg {
  width: 22px;
  height: 22px;
  position: relative;
  z-index: 1;
  pointer-events: none;
}

.emotion-2::before {
  content: '';
  display: block;
  position: absolute;
  width: 26px;
  height: 26px;
  background: #deebf6;
  border-radius: 100%;
  -webkit-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
  opacity: 0;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.emotion-2:hover,
.emotion-2:focus {
  color: #20588f;
}

.emotion-2:hover::before,
.emotion-2:focus::before {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  opacity: 1;
}

<div>
  <div
    class="c-figure emotion-6"
  >
    <div
      class="emotion-4 emotion-5"
      contenteditable="false"
    >
      <span
        data-reach-tooltip-trigger=""
        data-state="tooltip-hidden"
      >
        <button
          class="emotion-0 emotion-1"
          color="red"
          data-cy="remove-element"
          tabindex="-1"
          type="button"
        >
          <svg
            class="c-icon"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </g>
          </svg>
        </button>
      </span>
      <span
        data-reach-tooltip-trigger=""
        data-state="tooltip-hidden"
      >
        <button
          class="emotion-2 emotion-1"
          tabindex="-1"
          type="button"
        >
          <svg
            class="c-icon"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
              />
            </g>
          </svg>
        </button>
      </span>
    </div>
    <iframe
      allowfullscreen=""
      contenteditable="false"
      frameborder="0"
      height="486px"
      scrolling="no"
      src="https://nb.khanacademy.org/embed_video?v=jHPr-CuvHhs"
      title="nb.khanacademy.org"
    />
  </div>
</div>
`;
